fix darkmode button overlapping

--- a/styles/master.sass
+++ b/styles/master.sass
@@ -985,3 +985,14 @@
 		color: $px-gray
 		.theme-light &
 			color: $px-white
+
+body .color_switch
+	@include down-xsm
+		width: 25px
+		height: 25px
+		top: 86px
+		right: 300px
+		i
+			font-size: 10px
+			position: relative
+			top: -63%
